--- a/UI/styles.css
+++ b/UI/styles.css
@@ -464,7 +464,7 @@ h3 {
 }
 
 h4 {
-    font-size: 18px;
+    font-size: 10px;
     line-height: 24px;
     margin-top: 10px
 }
@@ -3026,6 +3026,9 @@ figcaption {
 .text-box._550px {
     max-width: 550px;
 }
+.text-box._1200px {
+    max-width: 1200px;
+}
 
 .text-box._500px {
     max-width: 500px;
@@ -3404,7 +3407,7 @@ figcaption {
 }
 
 .logotext:hover {
-    opacity:0.85;
+    opacity: 0.85;
 }
 
 .nav-logo:hover {
@@ -4307,7 +4310,7 @@ figcaption {
 
 .heading.h4 {
     margin-bottom: 12px;
-    font-size: 22px;
+    font-size: 10px;
     line-height: 1.45em;
 }
 
@@ -5646,7 +5649,7 @@ figcaption {
     }
 
     .heading.h4 {
-        font-size: 20px;
+        font-size: 10px;
     }
 
     .heading.large-h1 {
@@ -6101,3 +6104,143 @@ figcaption {
     font-size: large;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.card {
+    background-color: white;
+    width: fit-content;
+    border: #000;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: #000;
+
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    columns: 2;
+    padding: 0;
+    margin: 0;
+}
+
+
+.styled-table {
+    /* border-collapse: collapse; */
+    margin: 50px 0;
+    margin-bottom: 12px;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    /* border-radius: 15px; */
+}
+
+.styled-table thead tr {
+    background-color: #710101;
+    color: #ffffff;
+    text-align: center;
+    
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #dabcbc;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #710101;
+}
+
+.t-name{
+    font-weight: bold;
+    color: #710101;
+}
+
+.table-view-btn{
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: #990000;
+    color: white;
+    border-radius: 3px;
+}
+
+.table-view-btn:hover{
+    background-color: #c30000;
+}
+
+.table-accept-btn{
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: green;
+    color: white;
+    border-radius: 3px;
+}
+
+.table-accept-btn:hover{
+    background-color: rgb(0, 169, 0);
+}
+
+.table-reject-btn{
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: black;
+    color: white;
+    border-radius: 3px;
+}
+
+.table-reject-btn:hover{
+    background-color: rgb(72, 72, 72);
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 10px;
+    width: 50%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
