--- a/UI/styles.css
+++ b/UI/styles.css
@@ -29,7 +29,7 @@ canvas,
 progress,
 video {
     display: inline-block;
-    vertical-align: baseline
+    vertical-align: baseline;
 }
 
 audio:not([controls]) {
@@ -6221,13 +6221,17 @@ figcaption {
   }
   
   /* Modal Content/Box */
+  .flex{
+    display: flex;
+    align-items: center;
+  }
   .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     border-radius: 10px;
-    width: 50%; /* Could be more or less, depending on screen size */
+    width: 45%; /* Could be more or less, depending on screen size */
   }
   
   /* The Close Button */
@@ -6237,6 +6241,17 @@ figcaption {
     font-size: 28px;
     font-weight: bold;
   }
+
+  .contents-modall{
+        justify-content: space-between;
+  }
+
+  .flex-right-content {
+    flex-direction: column;
+    align-self: flex-start;
+    align-items: flex-start;
+  }
+
   
   .close:hover,
   .close:focus {
@@ -6244,3 +6259,42 @@ figcaption {
     text-decoration: none;
     cursor: pointer;
   }
+
+  /* Admin_category Page*/
+
+  .container{
+    flex-wrap: wrap;
+    /* column-gap: 13rem; */
+    flex-direction: row;
+    margin: 0;
+    justify-content: space-between;
+    row-gap: 2rem;
+    margin-left: 1.7rem;
+  }
+
+  .catogryAddingBtn{
+    text-align: end;
+    margin-bottom: 2rem;
+    margin-right: 1rem;
+  }
+  .category-item{
+    min-width: 30%;
+    padding: 1rem;
+    justify-content: space-between;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 4px 7px 8px rgb(0 0 0 / 24%);
+    border-radius: 13px;
+    border: 2px solid black;
+    gap: 1.5rem;
+  }
+  .category-item-left{
+    flex-direction: column;
+  }
+  .category-item-right{
+    margin-top: 0.6rem;
+    flex-direction: column;
+  }
+
+
+  /* Catogory Models */
+  
