--- a/UI/styles.css
+++ b/UI/styles.css
@@ -6114,6 +6114,14 @@ figcaption {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.card {
+    background-color: #fff;
+    width: fit-content;
+    border: #000;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: #000;
+}
 .card1 {
     background-color: rgba(113, 1, 1, 0.69);
     width: fit-content;
@@ -6121,7 +6129,6 @@ figcaption {
     border-radius: 5px;
     padding: 20px;
     box-shadow: #000;
-
 }
 
 .card2 {
@@ -6131,7 +6138,6 @@ figcaption {
     border-radius: 5px;
     padding: 20px;
     box-shadow: #000;
-
 }
 
 .grid {
