--- a/UI/styles.css
+++ b/UI/styles.css
@@ -6300,6 +6300,12 @@ figcaption {
     margin-left: 1.7rem;
   }
 
+  .category-section.light-color-gradient{
+    position: relative;
+    background-color: #f5f6f7;
+    background-image: linear-gradient(54deg, rgba(255, 131, 122, 0.25), rgba(255, 131, 122, 0) 28%), linear-gradient(241deg, rgba(239, 152, 207, 0.25), rgba(239, 152, 207, 0) 36%);
+  }
+  
   .catogryAddingBtn{
     text-align: end;
     margin-bottom: 2rem;
