Admin part frontend and backend Linking almost done

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -32,21 +32,21 @@
 		>
 			<div class="nav-container w-container">
 				<div class="logo-div">
-					<a href="#" aria-current="page" class="logotext" style="margin-right: 275px"><b>workerConnect</b></a>
+					<a href="/api/admin/dashboard" aria-current="page" class="logotext" style="margin-right: 275px"><b>workerConnect</b></a>
 				</div>
 
 				<nav role="navigation" class="nav-content w-nav-menu">
 					<div class="nav-menu">
-						<a href="admin_home.html" class="nav-link w-nav-link" style="color: #710101"><b>Home</b></a>
-						<a href="verifyworkers.html" class="nav-link w-nav-link">Verify Workers</a>
-						<a href="#" class="nav-link w-nav-link">Categories</a>
+						<a href="/api/admin/dashboard" class="nav-link w-nav-link" style="color: #710101"><b>Dashboard</b></a>
+						<!-- <a href="verifyworkers.html" class="nav-link w-nav-link">Verify Workers</a> -->
+						<a href="/api/admin/workers" class="nav-link w-nav-link">Workers</a>
+						<a href="/api/admin/categories" class="nav-link w-nav-link">Categories</a>
 						<a href="admin_pairings.html" class="nav-link w-nav-link">Pairings</a>
-						<a href="admin_clients.html" class="nav-link w-nav-link">Clients</a>
-						<a href="admin_workers.html" class="nav-link w-nav-link">Workers</a>
+						<a href="/api/admin/clients" class="nav-link w-nav-link">Clients</a>
 					</div>
 
 					<div class="nav-cta-button-container">
-						<a href="#" class="nav-link cta-button1 w-nav-link">Log Out</a>
+						<a href="/api/admin/logout" class="nav-link cta-button1 w-nav-link">Log Out</a>
 					</div>
 				</nav>
 				<div class="menu-button w-nav-button">
