--- a/UI/styles.css
+++ b/UI/styles.css
@@ -6353,3 +6353,38 @@ figcaption {
     flex-direction: column;
     align-items: flex-start;
 } 
+
+/* Negotaition Window*/
+.checked {
+    color: orange;
+  }
+
+.modal-area-nego{
+    flex-direction: column;
+}
+
+.price-section{
+    gap:2rem ;
+}
+
+.worker-price{
+    /* background: rgba(232, 248, 246, 0.8); */
+    /* box-shadow: 4px 7px 8px rgb(0 0 0 / 24%); */
+    border-radius: 13px;
+    border: 2px solid black;
+    min-width: 250px;
+    min-height: 200px;
+}
+
+.client-price{
+    /* background: rgba(255, 225, 246, 0.8); */
+    /* box-shadow: 4px 7px 8px rgb(0 0 0 / 24%); */
+    border-radius: 13px;
+    border: 2px solid black;
+    min-width: 250px;
+    min-height: 200px;
+}
+
+.btnSection-nego{
+    flex-direction: row;
+}
