--- a/UI/styles.css
+++ b/UI/styles.css
@@ -6335,20 +6335,28 @@ figcaption {
     
     height: 70%;
     width: 70%;
-    padding-block: 1rem;
+    padding: 1rem;
+    padding-right: 12rem;
+
     flex-wrap: wrap;
     /* column-gap: 13rem; */
     flex-direction: row;
     margin: 0;
-    justify-content: center;
+    justify-content: space-between;
     row-gap: 2rem;
     margin-left: 14.7rem;
     gap: 4rem;
-    background: rgba(232, 248, 246, 0.8);
+    /* background: rgba(232, 248, 246, 0.8); */
     box-shadow: 4px 7px 8px rgb(0 0 0 / 24%);
     border-radius: 13px;
     border: 2px solid black;
 }
+
+.profile-area img{
+    margin-left: 1rem;
+}
+
+
 .profile-area-right{
     flex-direction: column;
     align-items: flex-start;
