Chat window done

--- a/public/styles.css
+++ b/public/styles.css
@@ -6129,7 +6129,9 @@ figcaption {
     border-radius: 5px;
     padding: 20px;
     box-shadow: #000;
+
 }
+
 .card1 {
     background-color: rgba(113, 1, 1, 0.69);
     width: fit-content;
@@ -6306,6 +6308,12 @@ figcaption {
     margin-left: 1.7rem;
   }
 
+  .category-section.light-color-gradient{
+    position: relative;
+    background-color: #f5f6f7;
+    background-image: linear-gradient(54deg, rgba(255, 131, 122, 0.25), rgba(255, 131, 122, 0) 28%), linear-gradient(241deg, rgba(239, 152, 207, 0.25), rgba(239, 152, 207, 0) 36%);
+  }
+  
   .catogryAddingBtn{
     text-align: end;
     margin-bottom: 2rem;
@@ -6335,21 +6343,64 @@ figcaption {
     
     height: 70%;
     width: 70%;
-    padding-block: 1rem;
+    padding: 1rem;
+    padding-right: 12rem;
+
     flex-wrap: wrap;
     /* column-gap: 13rem; */
     flex-direction: row;
     margin: 0;
-    justify-content: center;
+    justify-content: space-between;
     row-gap: 2rem;
     margin-left: 14.7rem;
     gap: 4rem;
-    background: rgba(232, 248, 246, 0.8);
+    /* background: rgba(232, 248, 246, 0.8); */
     box-shadow: 4px 7px 8px rgb(0 0 0 / 24%);
     border-radius: 13px;
     border: 2px solid black;
 }
+
+.profile-area img{
+    margin-left: 1rem;
+}
+
+
 .profile-area-right{
     flex-direction: column;
     align-items: flex-start;
 } 
+
+/* Negotaition Window*/
+.checked {
+    color: orange;
+  }
+
+.modal-area-nego{
+    flex-direction: column;
+}
+
+.price-section{
+    gap:2rem ;
+}
+
+.worker-price{
+    /* background: rgba(232, 248, 246, 0.8); */
+    /* box-shadow: 4px 7px 8px rgb(0 0 0 / 24%); */
+    border-radius: 13px;
+    border: 2px solid black;
+    min-width: 250px;
+    min-height: 200px;
+}
+
+.client-price{
+    /* background: rgba(255, 225, 246, 0.8); */
+    /* box-shadow: 4px 7px 8px rgb(0 0 0 / 24%); */
+    border-radius: 13px;
+    border: 2px solid black;
+    min-width: 250px;
+    min-height: 200px;
+}
+
+.btnSection-nego{
+    flex-direction: row;
+}
