--- a/views/client/home.ejs
+++ b/views/client/home.ejs
@@ -39,7 +39,7 @@
 					<div class="nav-menu">
 						<a href="/api/client/home" class="nav-link w-nav-link" style="color: #710101"><b>Home</b></a>
 						<a href="#" class="nav-link w-nav-link" id="addTask1">Add Task</a>
-						<a href="client_mytasks.html" class="nav-link w-nav-link">My Tasks</a>
+						<a href="/api/client/mytask" class="nav-link w-nav-link">My Tasks</a>
 						<a href="#" class="nav-link w-nav-link">Notifications</a>
 						<a href="#" class="nav-link w-nav-link">My Profile</a>
 					</div>
