--- a/views/client/login.ejs
+++ b/views/client/login.ejs
@@ -32,7 +32,7 @@
 		>
 			<div class="nav-container w-container">
 				<div class="logo-div">
-					<a href="#" aria-current="page" class="logotext"><b>workerConnect</b></a>
+					<a href="/api/client/home" aria-current="page" class="logotext"><b>workerConnect</b></a>
 				</div>
 
 				<nav role="navigation" class="nav-content w-nav-menu">
