--- a/views/worker/home.ejs
+++ b/views/worker/home.ejs
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home - Client</title>
+    <title>Home - Worker</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/styles.css" rel="stylesheet" type="text/css" />
@@ -22,14 +22,14 @@
         role="banner" class="nav-bar w-nav">
         <div class="nav-container w-container">
             <div class="logo-div">
-                <a href="#" aria-current="page" class="logotext" style="margin-right: 350px;"><b>workerConnect</b></a>
+                <a href="/api/worker/home" aria-current="page" class="logotext" style="margin-right: 350px;"><b>workerConnect</b></a>
             </div>
 
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
-                    <a href="worker_home.html" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
+                    <a href="/api/worker/home" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
                     <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
-                    <a href="worker_myworks.html" class="nav-link w-nav-link">My Works</a>
+                    <a href="/api/worker/mywork" class="nav-link w-nav-link">My Works</a>
                     <a href="worker_notification.html" class="nav-link w-nav-link">Notifications</a>
                     <a href="#" class="nav-link w-nav-link">My Profile</a>
                 </div>
