--- a/views/worker/login.ejs
+++ b/views/worker/login.ejs
@@ -32,12 +32,12 @@
 		>
 			<div class="nav-container w-container">
 				<div class="logo-div">
-					<a href="#" aria-current="page" class="logotext"><b>workerConnect</b></a>
+					<a href="/api/worker/home" aria-current="page" class="logotext"><b>workerConnect</b></a>
 				</div>
 
 				<nav role="navigation" class="nav-content w-nav-menu">
 					<div class="nav-menu">
-						<a href="#" class="nav-link w-nav-link">Home</a>
+						<a href="/api/worker/home" class="nav-link w-nav-link">Home</a>
 						<a href="#" class="nav-link w-nav-link">About Us</a>
 						<a href="#" class="nav-link w-nav-link">For Clients</a>
 						<a href="#" class="nav-link w-nav-link">For Workers</a>
