--- a/views/worker/register.ejs
+++ b/views/worker/register.ejs
@@ -104,7 +104,7 @@
                                 </span>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 <span class="col">
-                                    <a class="account-label" href="clientlogin.html">Already have an account?</a>
+                                    <a class="account-label" href="/api/worker/login">Already have an account?</a>
                                 </span>
                                 </div>
                             </div>
