--- a/views/worker/home.ejs
+++ b/views/worker/home.ejs
@@ -30,8 +30,8 @@
                     <a href="/api/worker/home" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
                     <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
                     <a href="/api/worker/mywork" class="nav-link w-nav-link">My Works</a>
-                    <a href="worker_notification.html" class="nav-link w-nav-link">Notifications</a>
-                    <a href="#" class="nav-link w-nav-link">My Profile</a>
+                    <a href="/api/worker/notification" class="nav-link w-nav-link">Notifications</a>
+                    <a href="/api/worker/profile" class="nav-link w-nav-link">My Profile</a>
                 </div>
                 
                 <div class="nav-cta-button-container">
