--- a/views/client/notifications.ejs
+++ b/views/client/notifications.ejs
@@ -21,20 +21,21 @@
         role="banner" class="nav-bar w-nav">
         <div class="nav-container w-container">
             <div class="logo-div">
-                <a href="/api/worker/home" aria-current="page" class="logotext" style="margin-right: 350px;"><b>workerConnect</b></a>
+                <a href="/api/client/home" aria-current="page" class="logotext" style="margin-right: 350px;"><b>workerConnect</b></a>
             </div>
 
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
-                    <a href="/api/worker/home" class="nav-link w-nav-link">Home</a>
-                    <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
-                    <a href="/api/worker/mywork" class="nav-link w-nav-link">My Works</a>
-                    <a href="/api/worker/notification" class="nav-link w-nav-link"  style="color:#710101;"><b>Notifications</b></a>
-                    <a href="/api/worker/profile" class="nav-link w-nav-link">My Profile</a>
+                    <a href="/api/client/home" class="nav-link w-nav-link">Home</a>
+                    <a href="#" class="nav-link w-nav-link" id="addTask1">Add Task</a>
+                    <a href="/api/client/mytask" class="nav-link w-nav-link">My Tasks</a>
+                    <a href="/api/client/notification" class="nav-link w-nav-link" style="color:#710101;">
+                        <b>Notifications</b> </a>
+                    <a href="/api/client/profile" class="nav-link w-nav-link">My Profile</a>
                 </div>
-                
+
                 <div class="nav-cta-button-container">
-                    <a href="/api/worker/logout" class="nav-link cta-button1 w-nav-link">Log Out</a>
+                    <a href="/api/client/logout" class="nav-link cta-button1 w-nav-link">Log Out</a>
                 </div>
             </nav>
             <div class="menu-button w-nav-button">
