--- a/views/client/taskNego.ejs
+++ b/views/client/taskNego.ejs
@@ -42,7 +42,7 @@
 		>
 			<div class="nav-container w-container">
 				<div class="logo-div">
-					<a href="#" aria-current="page" class="logotext" style="margin-right: 350px"><b>workerConnect</b></a>
+					<a href="/api/client/home" aria-current="page" class="logotext" style="margin-right: 350px"><b>workerConnect</b></a>
 				</div>
 
 				<nav role="navigation" class="nav-content w-nav-menu">
@@ -50,12 +50,12 @@
 						<a href="/api/client/home" class="nav-link w-nav-link"><b>Home</b></a>
 						<a href="#" class="nav-link w-nav-link" id="addTask1">Add Task</a>
 						<a href="/api/client/mytask" class="nav-link w-nav-link" style="color: #710101"><b>My Tasks</b></a>
-						<a href="client_notification.html" class="nav-link w-nav-link">Notifications</a>
-						<a href="clientProfile.html" class="nav-link w-nav-link">My Profile</a>
+						<a href="/api/client/notification" class="nav-link w-nav-link">Notifications</a>
+						<a href="/api/client/profile" class="nav-link w-nav-link">My Profile</a>
 					</div>
 
 					<div class="nav-cta-button-container">
-						<a href="#" class="nav-link cta-button1 w-nav-link">Log Out</a>
+						<a href="/api/client/logout" class="nav-link cta-button1 w-nav-link">Log Out</a>
 					</div>
 				</nav>
 				<div class="menu-button w-nav-button">
