--- a/views/worker/myWork.ejs
+++ b/views/worker/myWork.ejs
@@ -51,16 +51,16 @@
               style="color: #710101"
               ><b>My Works</b></a
             >
-            <a href="worker_notification.html" class="nav-link w-nav-link"
+            <a href="/api/worker/notification" class="nav-link w-nav-link"
               >Notifications</a
             >
-            <a href="workerProfile.html" class="nav-link w-nav-link"
+            <a href="/api/worker/profile" class="nav-link w-nav-link"
               >My Profile</a
             >
           </div>
 
           <div class="nav-cta-button-container">
-            <a href="#" class="nav-link cta-button1 w-nav-link">Log Out</a>
+            <a href="/api/worker/logout" class="nav-link cta-button1 w-nav-link">Log Out</a>
           </div>
         </nav>
         <div class="menu-button w-nav-button">
