--- a/views/admin/clients.ejs
+++ b/views/admin/clients.ejs
@@ -31,7 +31,7 @@
                     <!-- <a href="verifyworkers.html" class="nav-link w-nav-link" >Verify Workers</a> -->
                     <a href="/api/admin/workers" class="nav-link w-nav-link">Workers</a>
                     <a href="/api/admin/categories" class="nav-link w-nav-link">Categories</a>
-                    <a href="admin_pairings.html" class="nav-link w-nav-link" >Pairings</a>
+                    <a href="/api/admin/paring" class="nav-link w-nav-link" >Pairings</a>
                     <a href="/api/admin/clients" class="nav-link w-nav-link" style="color:#710101;"><b>Clients</b></a>
                 </div>
                 
