--- a/views/worker/myWork.ejs
+++ b/views/worker/myWork.ejs
@@ -44,7 +44,7 @@
         <nav role="navigation" class="nav-content w-nav-menu">
           <div class="nav-menu">
             <a href="/api/worker/home" class="nav-link w-nav-link">Home</a>
-            <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
+            <!-- <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a> -->
             <a
               href="/api/worker/mywork"
               class="nav-link w-nav-link"
