--- a/views/worker/notification.ejs
+++ b/views/worker/notification.ejs
@@ -27,7 +27,7 @@
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
                     <a href="/api/worker/home" class="nav-link w-nav-link">Home</a>
-                    <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
+                    <!-- <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a> -->
                     <a href="/api/worker/mywork" class="nav-link w-nav-link">My Works</a>
                     <a href="/api/worker/notification" class="nav-link w-nav-link"  style="color:#710101;"><b>Notifications</b></a>
                     <a href="/api/worker/profile" class="nav-link w-nav-link">My Profile</a>
@@ -53,7 +53,7 @@
                     <% for(let i=0; i<notifications.length; i++){ %>
                         <div class="message_container" style="text-align: start;border: 1px solid silver;padding: 1rem; border-radius: 5px;background-color: white;">
                             <div class="date_box">
-                                <p><i><%=notifications[i].date.toLocaleString()%></i></p>
+                                <p><i><%=notifications[i].ts.toLocaleString()%></i></p>
                             </div>
                             <div class="message_box" style="font-size: 1.1rem;">
                                 <%=notifications[i].message%>
